Fixed and improved the key chains.