@@ -1,15 +1,15 @@
 package net.digitalid.utility.cryptography.key.chain;
 
-import java.util.Iterator;
 
 import javax.annotation.Nonnull;
 
 import net.digitalid.utility.annotations.method.Pure;
+import net.digitalid.utility.collections.list.FreezableLinkedList;
 import net.digitalid.utility.collections.list.FreezableList;
 import net.digitalid.utility.collections.list.ReadOnlyList;
 import net.digitalid.utility.contracts.Require;
-import net.digitalid.utility.contracts.exceptions.PreconditionViolationException;
 import net.digitalid.utility.cryptography.key.AsymmetricKey;
+import net.digitalid.utility.exceptions.UnexpectedValueException;
 import net.digitalid.utility.freezable.annotations.Frozen;
 import net.digitalid.utility.time.Time;
 import net.digitalid.utility.tuples.Pair;
@@ -34,31 +34,42 @@ public abstract class KeyChain<K extends AsymmetricKey> {
     @Pure
     public abstract @Nonnull @Frozen @NonEmpty @StrictlyDescending ReadOnlyList<@Nonnull Pair<@Nonnull Time, @Nonnull K>> getItems();
     
-    /**
-     * Returns the key in use at the given time.
-     * 
-     * @param time the time for which the key returned.
-     * 
-     * @return the key in use at the given time.
-     * 
-     * @throws PreconditionViolationException if there is no key for the given time.
-     */
-    @Pure
-    public final @Nonnull K getKey(@Nonnull Time time) {
-        for (final @Nonnull Pair<Time, K> item : getItems()) {
-            if (time.isGreaterThanOrEqualTo(item.get0())) { return item.get1(); }
-        }
-        // TODO:
-        throw PreconditionViolationException.with("There is no key for the given time (" + time + ") in this key chain " + this + ".");
-    }
+    /* -------------------------------------------------- Times -------------------------------------------------- */
     
     /**
      * Returns the newest time of this key chain.
      */
     @Pure
-    public final @Nonnull Time getNewestTime() {
-        return getItems().get(0).get0();
+    public @Nonnull Time getNewestTime() {
+        return getItems().getFirst().get0();
     }
+    
+    /**
+     * Returns the oldest time of this key chain.
+     */
+    @Pure
+    public @Nonnull Time getOldestTime() {
+        return getItems().getLast().get0();
+    }
+    
+    /* -------------------------------------------------- Retrieval -------------------------------------------------- */
+    
+    /**
+     * Returns the key in use at the given time.
+     * 
+     * @require time.isGreaterThanOrEqualTo(getOldestTime()) : "There is no key for the given time in this key chain.";
+     */
+    @Pure
+    public @Nonnull K getKey(@Nonnull Time time) {
+        Require.that(time.isGreaterThanOrEqualTo(getOldestTime())).orThrow("There is no key for the time $ in the key chain $.", time, this);
+        
+        for (@Nonnull Pair<@Nonnull Time, @Nonnull K> item : getItems()) {
+            if (time.isGreaterThanOrEqualTo(item.get0())) { return item.get1(); }
+        }
+        throw UnexpectedValueException.with("time", time);
+    }
+    
+    /* -------------------------------------------------- Modification -------------------------------------------------- */
     
     /**
      * Adds a new key to this key chain by returning a new instance.
@@ -67,31 +78,28 @@ public abstract class KeyChain<K extends AsymmetricKey> {
      * @param key the key that is valid from the given time on.
      * 
      * @return a new key chain with the given key added and expired ones removed.
+     * 
+     * @require time.isGreaterThan(getNewestTime()) : "The time is greater than the newest time of this key chain.";
+     * @require time.isGreaterThan(Time.TROPICAL_YEAR.ahead()) : "The time lies at least one year in the future.";
      */
     @Pure
-    public final @Nonnull KeyChain<K> add(@Nonnull Time time, @Nonnull K key) {
+    public @Nonnull KeyChain<K> add(@Nonnull Time time, @Nonnull K key) {
         Require.that(time.isGreaterThan(getNewestTime())).orThrow("The time is greater than the newest time of this key chain.");
-        Require.that(time.isGreaterThan(Time.CURRENT_TIME.add(Time.TROPICAL_YEAR))).orThrow("The time lies at least one year in the future.");
+        Require.that(time.isGreaterThan(Time.TROPICAL_YEAR.ahead())).orThrow("The time lies at least one year in the future.");
         
-        final @Nonnull FreezableList<Pair<Time, K>> copy = getItems().clone();
-        final @Nonnull Pair<Time, K> pair = Pair.of(time, key);
-        copy.add(0, pair);
+        final @Nonnull FreezableList<@Nonnull Pair<@Nonnull Time, @Nonnull K>> items = FreezableLinkedList.withNoElements();
+        items.add(0, Pair.of(time, key));
         
         final @Nonnull Time cutoff = Time.TWO_YEARS.ago();
-        final @Nonnull Iterator<Pair<Time, K>> iterator = copy.iterator();
-        while (iterator.hasNext()) {
-            if (iterator.next().get0().isLessThan(cutoff)) {
-                while (iterator.hasNext()) {
-                    iterator.next();
-                    iterator.remove();
-                }
-                break;
-            }
+        for (@Nonnull Pair<@Nonnull Time, @Nonnull K> item : getItems()) {
+            items.add(item);
+            if (item.get0().isLessThan(cutoff)) { break; }
         }
-        return createKeyChain(copy.freeze());
+        
+        return createKeyChain(items.freeze());
     }
     
     @Pure
-    protected abstract KeyChain<K> createKeyChain(@Nonnull ReadOnlyList<Pair<Time, K>> list);
+    protected abstract @Nonnull KeyChain<K> createKeyChain(@Nonnull @Frozen @NonEmpty @StrictlyDescending ReadOnlyList<@Nonnull Pair<@Nonnull Time, @Nonnull K>> items);
     
 }
